--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "google-auth-library": "^7.9.1",
+    "http": "0.0.1-security",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.6.3"
+    "nodemailer": "^6.6.3",
+    "socket.io": "^4.2.0"
   }
 }
